--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
     <header>
         Github Profiles
     </header>
+
     <form id="form" onsubmit="return formSubmit()">
         <input type="text" id="search" autofocus placeholder="Search a Github User Here" />
+        <button><img src="search.png" alt="Search button"></button>
     </form>
     <div id="main">
 
