Adding followers card

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
+
     <header>
         Github Profiles
     </header>
@@ -19,11 +20,14 @@
         <input type="text" id="search" autofocus placeholder="Search a Github User Here" />
         <button><img src="search.png" alt="Search button"></button>
     </form>
-    <div id="main">
+    <div id="mainContainer">
+        <div id="main"> </div>
+        <div id="follow">
 
-
+        </div>
     </div>
     <script src="script.js"></script>
+
 </body>
 
 </html>
