--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <canvas id="canvas"></canvas>
-
+    <canvas id="canvas1"></canvas>
     <header>
         Github Profiles
     </header>
