--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <canvas id="canvas"></canvas>
-    <canvas id="canvas1"></canvas>
+    <div id="canvas-container">
+        <canvas id="canvas"></canvas>
+        <canvas id="canvas1"></canvas>
+    </div>
     <header>
         Github Profiles
     </header>
